# AwaLWM2M

./: .editorconfig  .gitignore  .markdownlint.json  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  LICENSE  Makefile  README.md
api/examples/: CMakeLists.txt  client-defineset-example.c  client-definition-iterator-example.c  client-delete-array-range-example.c  client-delete-example.c  client-get-array-example.c  client-get-contains-path-example.c  client-get-example.c  client-set-array-example.c  client-set-create-example.c  client-set-example.c  client-subscribe-to-change-example.c  client-subscribe-to-execute-example.c  server-defineset-example.c  server-delete-object-instance-example.c  server-event-example.c  server-execute-arguments-example.c  server-execute-example.c  server-list-clients-example.c  server-observe-example.c  server-read-example.c  server-write-create-example.c  server-write-create-unspecified-instance-example.c  server-write-example.c
api/examples/tutorials/: .gitignore  CMakeLists.txt  Makefile  client-tutorial1.c  client-tutorial2.c  server-tutorial.c  static-client-tutorial1.c  static-client-tutorial2.c  static-client-tutorial3.c
api/src/: CMakeLists.txt  arrays.c  arrays.h  boolean_array.c  changeset.c  changeset.h  client_define_operation.c  client_delete_operation.c  client_iterator.c  client_iterator.h  client_notification.c  client_session.c  client_session.h  client_subscribe.c  client_subscribe.h  client_subscribe_response.c  client_subscribe_response.h  define_common.c  define_common.h  define_operation.c  define_operation.h  error.c  error.h  execute_operation.c  float_array.c  get_operation.c  get_operation.h  get_response.c  get_response.h  integer_array.c  ipc.c  ipc.h  ipc_defs.h  iterator.c  iterator.h  list.c  list.h  list_clients_operation.c  log.c  log.h  (+61 more)
api/tests/: CMakeLists.txt  debug.bsc  gtest.bsc  object-defs-gtest.xml  test_array_types.cc  test_bootstrap.cc  test_changeset.cc  test_client.cc  test_client_define_defaults.cc  test_client_define_operation.cc  test_client_delete_operation.cc  test_client_iterator.cc  test_client_server_interaction.cc  test_client_session.cc  test_daemon.cc  test_define_common.cc  test_define_operation.cc  test_error.cc  test_execute_operation.cc  test_get_operation.cc  test_ipc.cc  test_iterator.cc  test_list.cc  test_list_clients_operation.cc  test_log.cc  test_lwm2m_error.cc  test_map.cc  test_objects_tree.cc  test_observe_operation.cc  test_operation_common.cc  test_path.cc  test_path_iterator.cc  test_path_result.cc  test_queue.cc  test_read_operation.cc  test_response_common.cc  test_server.cc  test_server_define_defaults.cc  test_server_define_operation.cc  test_server_delete_operation.cc  (+15 more)
api/tests-static/: CMakeLists.txt  test_client.cc  test_static_api.cc  test_static_api_create_delete.cc  test_static_api_create_delete_deprecated.cc  test_static_api_get_resource_instance_pointer.cc  test_static_api_get_resource_instance_pointer_deprecated.cc  test_static_api_handlers.cc  test_static_api_handlers_deprecated.cc  test_static_api_with_pointer.cc  test_static_api_with_pointer_deprecated.cc
api/tests-static/support/: static_api_support.cc  static_api_support.h
api/tests/client/: test_client.cc  test_client_define_defaults.cc  test_client_define_operation.cc  test_client_delete_operation.cc  test_client_objdefs_from_file.cc  test_client_session.cc  test_get_operation.cc  test_set_operation.cc  test_subscribe_operation.cc
api/tests/common/: test_bootstrap.cc  test_client_server_interaction.cc  test_define_common.cc  test_define_operation.cc  test_ipc.cc  test_iterator.cc  test_log.cc  test_lwm2m_error.cc  test_objects_tree.cc  test_operation_common.cc  test_response_common.cc  test_session_common.cc  test_string_iterator.cc
api/tests/server/: test_execute_operation.cc  test_list_clients_operation.cc  test_observe_operation.cc  test_read_operation.cc  test_server.cc  test_server_define_defaults.cc  test_server_define_operation.cc  test_server_delete_operation.cc  test_server_event.cc  test_server_events.cc  test_server_notification.cc  test_server_objdefs_from_file.cc  (+5 more)
core/src/: CMakeLists.txt
core/tests/: CMakeLists.txt  lwm2m_device_object.c  lwm2m_device_object.h  main.cc  test_definition_registry.cc  test_json.cc  test_lwm2m_core.cc  test_lwm2m_tree.cc  test_lwm2m_tree_builder.cc  test_lwm2m_types.cc  test_object_store_interface.cc  test_object_tree.cc  test_plaintext.cc  test_prettyprint.cc  test_template.cc  test_tlv.cc  test_xml.cc  unit_support.cc  unit_support.h
daemon/tests/: CMakeLists.txt
lib/: CMakeLists.txt
lib/b64/: CMakeLists.txt  Makefile.b64  b64.c  b64.h
lib/gtest/: CMakeLists.txt
lib/hmac/: CMakeLists.txt  Makefile.hmac  hmac.c  hmac.h
lib/jsmn/: CMakeLists.txt  CMakeLists.txt.in
lib/libcoap/: CMakeLists.txt
lib/tinydtls/: CMakeLists.txt  apply_patches
lib/xml/: CMakeLists.txt  Makefile  Makefile.xml  xmlparser.c  xmlparser.h  xmltree.c  xmltree.h
tools/: .gitignore  CMakeLists.txt  Makefile  awa-client-define-base.ggo  awa-client-define.c  awa-client-define_cmdline.c  awa-client-define_cmdline.h  awa-client-delete.c  awa-client-delete.ggo  awa-client-delete_cmdline.c  awa-client-delete_cmdline.h  awa-client-explore.c  awa-client-explore.cmdline  awa-client-explore_cmdline.c  awa-client-explore_cmdline.h  awa-client-get.c  awa-client-get.cmdline  awa-client-get_cmdline.c  awa-client-get_cmdline.h  awa-client-set.c  awa-client-set.cmdline  awa-client-set_cmdline.c  awa-client-set_cmdline.h  awa-client-subscribe.c  awa-client-subscribe.cmdline  awa-client-subscribe_cmdline.c  awa-client-subscribe_cmdline.h  awa-server-create.c  awa-server-create.cmdline  awa-server-create_cmdline.c  awa-server-create_cmdline.h  awa-server-define-base.ggo  awa-server-define.c  awa-server-define_cmdline.c  awa-server-define_cmdline.h  awa-server-delete.c  awa-server-delete.cmdline  awa-server-delete.ggo  awa-server-delete_cmdline.c  awa-server-delete_cmdline.h  (+35 more)
tools/tests/: object-defs-tools-test.xml  run_tests  run_tests.sh  test.bsc
(+334 files in other folders)
